# a-collection-head-office

./: .firebaserc  .gitignore  .gitlab-ci.yml  AGENTS.md  MASTER_PROMPT.txt  README.md  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  firebase-deploy.yml  release.yml
.opencode/: instructions.md  settings.json
.opencode/plans/: complete-project-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/adapters/: duckduckgo.rs  mod.rs  serpapi.rs
src-tauri/src/agents/: mod.rs
src-tauri/src/ai/: catalog_composer.rs  ingestion.rs  local_match.rs  marketing_engine.rs  mod.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/customers/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/locations/: mod.rs
src-tauri/src/purchase_trips/: mod.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: AiWorkspace.tsx  FormattedMessage.tsx  ProductDraftCard.tsx  ProductImage.tsx
src/pages/: Agents.tsx  Automation.tsx  Catalog.tsx  Customers.tsx  Dashboard.tsx  Inventory.tsx  Locations.tsx  PurchaseTrips.tsx  Reports.tsx  Settings.tsx  ShareCenter.tsx  SocialHub.tsx
src/stores/: store.ts
src/utils/: share.ts
