[package]
name = "a-collection-head-office"
version = "0.12.4"
description = "Local-first AI-assisted business OS"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = [] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
image = "0.25.1"
csv = "1.3.0"
dirs = "5.0.1"
base64 = "0.22.1"
rqrr = "0.5"
ocrs = "0.6"
rten-tensor = "0.8"
scraper = "0.19"
urlencoding = "2.1"
